# playquiznow-mcp

./: DEVELOPER.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  server.json  smithery.yaml
src/: client.ts  index.ts
src/playquiznow_mcp/: client.py  server.py
src/playquiznow_mcp/tools/: quiz.py
src/tools/: quiz.ts
