[project]
name = "playquiznow-mcp"
version = "0.1.0"
description = "MCP server for PlayQuizNow — create and manage quizzes from AI tools like Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "PlayQuizNow", email = "support@playquiznow.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "quiz",
    "education",
    "playquiznow",
    "ai",
    "claude",
    "claude-desktop",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://playquiznow.com"
Repository = "https://github.com/playquiznow/playquiznow-mcp"
Documentation = "https://github.com/playquiznow/playquiznow-mcp#readme"
"Bug Tracker" = "https://github.com/playquiznow/playquiznow-mcp/issues"

[project.scripts]
playquiznow-mcp = "playquiznow_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playquiznow_mcp"]
